--- a/style.css
+++ b/style.css
@@ -255,6 +255,7 @@ a:hover
 
 .workp
 {
+    cursor: pointer;
     width:100%;
     height: 0;
     background: linear-gradient(rgba(14, 13, 13, 0.349),#ff0051b9);
